增加题型和样式

--- a/src/assets/css/icon/preview.css
+++ b/src/assets/css/icon/preview.css
@@ -34,8 +34,8 @@
     margin-right: 4px;
   }
   .q-instruction{
-    color: grey;
-    font-size: 14px;
+    color: #888;
+    font-size: 13px;
     padding-left: 20px;
   }
   .question-body {
