--- a/src/assets/css/icon/analysis.css
+++ b/src/assets/css/icon/analysis.css
@@ -41,5 +41,13 @@
 .d-btn{
     float:right;
     margin-right: 60px;
-    margin-top: -20px;
+}
+
+#demo2{
+    width: 80%;
+}
+
+#head{
+    height:30px;
+    vertical-align:middle;
 }
