--- a/src/assets/css/icon/preview.css
+++ b/src/assets/css/icon/preview.css
@@ -22,7 +22,6 @@
     margin-top: 45px;
   }
   .question-title {
-    font-size: 44px;
     word-break: break-word;
   }
 
@@ -30,7 +29,7 @@
     font-size: 22px;
   }
   .question-required {
-    margin-left: 4px;
+    margin-left: 2px;
   }
   .q-instruction{
     color: #999;
@@ -106,6 +105,10 @@
 .el-col-1 {
   width: 3%;
   min-height: 1px
+}
+
+.loc{
+  margin-bottom: 20px;
 }
 
 
