--- a/src/assets/css/icon/preview.css
+++ b/src/assets/css/icon/preview.css
@@ -38,6 +38,7 @@
     color: #999;
     font-size: 14px;
     margin-top: 3px;
+    margin-left: 24px;
   }
   .question-body {
     padding-top: 10px;
